Thay đổi giao diện, tạo thêm giao diện register, quên mk

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeAPI23"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.RegisterActivity">
-
-        </activity>
+        <activity android:name=".activity.ForgotActivity"></activity>
+        <activity android:name=".activity.RegisterActivity"></activity>
         <activity android:name=".activity.LoginActivity">
-
-        </activity>
-        <activity android:name=".activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.HomeActivity"></activity>
         <activity android:name=".activity.MainActivity" />
     </application>
 
