--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    compile 'info.hoang8f:fbutton:1.0.5'
+
 
 }
