--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeAPI23"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ProductDetailActivity"></activity>
+        <activity android:name=".activity.BillActivity"></activity>
+        <activity android:name=".activity.ProductDetailActivity" />
         <activity android:name=".activity.ProductActivity">
 
         </activity>
-        <activity android:name=".activity.ExampleActivity">
-
-        </activity>
+        <activity android:name=".activity.ExampleActivity"></activity>
         <activity android:name=".activity.InfoAccountActivity" />
         <activity android:name=".activity.ForgotActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.HomeActivity"></activity>
+        <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
