--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeAPI23"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.BillActivity">
-
-        </activity>
+        <activity android:name=".activity.BillDetailActivity"></activity>
+        <activity android:name=".activity.MemberActivity" />
+        <activity android:name=".activity.HelpActivity" />
+        <activity android:name=".activity.BillHistoryActivity" />
+        <activity android:name=".activity.BillActivity" />
         <activity android:name=".activity.ProductDetailActivity" />
-        <activity android:name=".activity.ProductActivity">
+        <activity android:name=".activity.ProductActivity" />
+        <activity android:name=".activity.ExampleActivity" >
 
         </activity>
-        <activity android:name=".activity.ExampleActivity"></activity>
         <activity android:name=".activity.InfoAccountActivity" />
         <activity android:name=".activity.ForgotActivity" />
         <activity android:name=".activity.RegisterActivity" />
