--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     compile 'info.hoang8f:fbutton:1.0.5'
 
+    //git
+    implementation 'com.github.Cutta:GifView:1.4'
 
 }
