--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/AppThemeAPI23"
         android:usesCleartextTraffic="true">
         <activity android:name=".activity.NewspaperDetailActivity"></activity>
-        <activity android:name=".activity.StoreDetailActivity" />
+        <activity android:name=".activity.StoreDetailActivity" >
+
+        </activity>
         <activity android:name=".activity.OrderHistoryActivity" />
         <activity android:name=".activity.OrderDetailActivity" />
         <activity android:name=".activity.OrderActivity" />
@@ -31,7 +33,9 @@
         <activity android:name=".activity.ForgotActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.HomeActivity" >
+
+        </activity>
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
