--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,26 +14,29 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeAPI23"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.NewspaperDetailActivity"></activity>
-        <activity android:name=".activity.StoreDetailActivity" >
-
-        </activity>
+        <activity android:name=".activity.OrderListActivity"></activity>
+        <activity android:name=".activity.NewspaperDetailActivity" />
+        <activity android:name=".activity.StoreDetailActivity"></activity>
         <activity android:name=".activity.OrderHistoryActivity" />
         <activity android:name=".activity.OrderDetailActivity" />
         <activity android:name=".activity.OrderActivity" />
         <activity android:name=".activity.BillDetailActivity" />
         <activity android:name=".activity.BillHistoryActivity" />
         <activity android:name=".activity.MemberActivity" />
-        <activity android:name=".activity.HelpActivity" />
+        <activity android:name=".activity.HelpActivity" >
+
+        </activity>
         <activity android:name=".activity.BillActivity" />
         <activity android:name=".activity.ProductDetailActivity" />
         <activity android:name=".activity.ProductActivity" />
-        <activity android:name=".activity.ExampleActivity" />
+        <activity android:name=".activity.ExampleActivity" >
+
+        </activity>
         <activity android:name=".activity.InfoAccountActivity" />
         <activity android:name=".activity.ForgotActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.HomeActivity" >
+        <activity android:name=".activity.HomeActivity">
 
         </activity>
         <activity android:name=".activity.MainActivity">
