--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeAPI23"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.AdminManagerActivity"></activity>
+        <activity android:name=".activity.ManagerDonHangActivity"></activity>
+        <activity android:name=".activity.ManagerTinTucActivity" />
+        <activity android:name=".activity.ManagerCuaHangActivity" />
+        <activity android:name=".activity.ManagerMenuActivity" />
+        <activity android:name=".activity.AdminManagerActivity" />
         <activity android:name=".activity.OrderListActivity" />
         <activity android:name=".activity.NewspaperDetailActivity" />
         <activity android:name=".activity.StoreDetailActivity" />
@@ -24,16 +28,16 @@
         <activity android:name=".activity.BillDetailActivity" />
         <activity android:name=".activity.BillHistoryActivity" />
         <activity android:name=".activity.MemberActivity" />
-        <activity android:name=".activity.HelpActivity"></activity>
+        <activity android:name=".activity.HelpActivity" />
         <activity android:name=".activity.BillActivity" />
         <activity android:name=".activity.ProductDetailActivity" />
         <activity android:name=".activity.ProductActivity" />
-        <activity android:name=".activity.ExampleActivity"></activity>
+        <activity android:name=".activity.ExampleActivity" />
         <activity android:name=".activity.InfoAccountActivity" />
         <activity android:name=".activity.ForgotActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.HomeActivity"></activity>
+        <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
